# Relay-Test

./: Cargo.toml  README.md  codes.txt
nostr_relay_db/: db  snap.0000000000001F8E
src/: main.rs
