[package]
name = "relay-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.80"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
sled = "0.34.7"
tokio-tungstenite = "0.21.0" 
futures-util = "0.3.30"
